--- a/content/resources/15-769f05-th.md
+++ b/content/resources/15-769f05-th.md
@@ -1,12 +1,14 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-769-operations-strategy-fall-2010/83d8408bd178dd38dcc7d6d9638c2bc7_15-769f05-th.jpg
+file: /media/courses/15-769-operations-strategy-fall-2010/83d8408bd178dd38dcc7d6d9638c2bc7_15-769f05-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 15-769f05-th.jpg
 uid: 83d8408b-d178-dd38-dcc7-d6d9638c2bc7
