--- a/content/resources/mit15_769f10_lec02.md
+++ b/content/resources/mit15_769f10_lec02.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information related to frameworks for strategy
   and the decision category approach. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-769-operations-strategy-fall-2010/61538bb741e26836c7ddc6d9b3052e21_MIT15_769F10_lec02.pdf
+file: /media/courses/15-769-operations-strategy-fall-2010/61538bb741e26836c7ddc6d9b3052e21_MIT15_769F10_lec02.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_769F10_lec02.pdf
 uid: 61538bb7-41e2-6836-c7dd-c6d9b3052e21
