--- a/content/resources/mit15_769f10_lec04.md
+++ b/content/resources/mit15_769f10_lec04.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information related to value chain dynamics and
   operations decisions. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-769-operations-strategy-fall-2010/a23deeaa5da797f7784a557cc2a9ab7d_MIT15_769F10_lec04.pdf
+file: /media/courses/15-769-operations-strategy-fall-2010/a23deeaa5da797f7784a557cc2a9ab7d_MIT15_769F10_lec04.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_769F10_lec04.pdf
 uid: a23deeaa-5da7-97f7-784a-557cc2a9ab7d
