--- a/content/resources/mit15_769f10_lec08.md
+++ b/content/resources/mit15_769f10_lec08.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information related to business processes.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-769-operations-strategy-fall-2010/dbe57ec189655543dada8274cdf83bbb_MIT15_769F10_lec08.pdf
+file: /media/courses/15-769-operations-strategy-fall-2010/dbe57ec189655543dada8274cdf83bbb_MIT15_769F10_lec08.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_769F10_lec08.pdf
 uid: dbe57ec1-8965-5543-dada-8274cdf83bbb
