--- a/content/resources/mit15_769f10_lec09.md
+++ b/content/resources/mit15_769f10_lec09.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information related to process technology decisions
   and multiple plants. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-769-operations-strategy-fall-2010/64b9ac367a372cff4fd00d20d9d75fc5_MIT15_769F10_lec09.pdf
+file: /media/courses/15-769-operations-strategy-fall-2010/64b9ac367a372cff4fd00d20d9d75fc5_MIT15_769F10_lec09.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_769F10_lec09.pdf
 uid: 64b9ac36-7a37-2cff-4fd0-0d20d9d75fc5
