--- a/content/resources/mit15_769f10_lec11.md
+++ b/content/resources/mit15_769f10_lec11.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information related to facilities strategies
   and globalization; comparisons of plant productivity. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-769-operations-strategy-fall-2010/6e38c550f1057b29278a657210192d49_MIT15_769F10_lec11.pdf
+file: /media/courses/15-769-operations-strategy-fall-2010/6e38c550f1057b29278a657210192d49_MIT15_769F10_lec11.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_769F10_lec11.pdf
 uid: 6e38c550-f105-7b29-278a-657210192d49
