--- a/content/resources/mit15_769f10_lec12.md
+++ b/content/resources/mit15_769f10_lec12.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information related to summary lecture on facilities
   strategy and globalization. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-769-operations-strategy-fall-2010/f0b86d0e617013327db391d0247ec18d_MIT15_769F10_lec12.pdf
+file: /media/courses/15-769-operations-strategy-fall-2010/f0b86d0e617013327db391d0247ec18d_MIT15_769F10_lec12.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_769F10_lec12.pdf
 uid: f0b86d0e-6170-1332-7db3-91d0247ec18d
