--- a/content/resources/mit15_769f10_lec21.md
+++ b/content/resources/mit15_769f10_lec21.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information related to globalization, joint ventures,
   sourcing overseas, and macroeconomic effects of off- shoring. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-769-operations-strategy-fall-2010/1962df4ca1e95a441fd285a661696bfc_MIT15_769F10_lec21.pdf
+file: /media/courses/15-769-operations-strategy-fall-2010/1962df4ca1e95a441fd285a661696bfc_MIT15_769F10_lec21.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_769F10_lec21.pdf
 uid: 1962df4c-a1e9-5a44-1fd2-85a661696bfc
