--- a/content/resources/15-769f05-th.md
+++ b/content/resources/15-769f05-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/15-769-operations-strategy-fall-2010/83d8408bd178dd38dcc7d6d9638c2bc7_15-769f05-th.jpg
+file: /courses/15-769-operations-strategy-fall-2010/83d8408bd178dd38dcc7d6d9638c2bc7_15-769f05-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: ''
@@ -13,3 +13,5 @@ resourcetype: Image
 title: 15-769f05-th.jpg
 uid: 83d8408b-d178-dd38-dcc7-d6d9638c2bc7
 ---
+New image Upload
+
