--- a/content/resources/15-769f10-th.md
+++ b/content/resources/15-769f10-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/15-769-operations-strategy-fall-2010/1615ec4add2a15138dd983524f7aa4b9_15-769f10-th.jpg
+file: /courses/15-769-operations-strategy-fall-2010/1615ec4add2a15138dd983524f7aa4b9_15-769f10-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The life cycle of a product, as defined by the US National Institute of
@@ -17,3 +17,5 @@ resourcetype: Image
 title: 15-769f10-th.jpg
 uid: 1615ec4a-dd2a-1513-8dd9-83524f7aa4b9
 ---
+New image Upload
+
