--- a/content/resources/15-769f10.md
+++ b/content/resources/15-769f10.md
@@ -5,7 +5,7 @@ description: The life cycle of a product, as defined by the US National Institut
   and analyzes the strategic decisions made by firms in manufacturing operations,
   and also analyzes operations strategy in service firms. (This image is in the public
   domain.)
-file: /media/courses/15-769-operations-strategy-fall-2010/1cf33708520b0e3a311942147280d77e_15-769f10.jpg
+file: /courses/15-769-operations-strategy-fall-2010/1cf33708520b0e3a311942147280d77e_15-769f10.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The life cycle of a product, as defined by the US National Institute of
@@ -21,3 +21,5 @@ resourcetype: Image
 title: 15-769f10.jpg
 uid: 1cf33708-520b-0e3a-3119-42147280d77e
 ---
+The life cycle of a product, as defined by the US National Institute of Standards and Technology, Manufacturing Engineering Laboratory. This course discusses and analyzes the strategic decisions made by firms in manufacturing operations, and also analyzes operations strategy in service firms. (This image is in the public domain.)
+
