--- a/content/resources/mit15_769f10_lec01.md
+++ b/content/resources/mit15_769f10_lec01.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to course introduction; innovation
   and operations discipline. '
-file: /media/courses/15-769-operations-strategy-fall-2010/cdf77e81ac9ebbb6bcf80e6646c36ffe_MIT15_769F10_lec01.pdf
+file: /courses/15-769-operations-strategy-fall-2010/cdf77e81ac9ebbb6bcf80e6646c36ffe_MIT15_769F10_lec01.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_769F10_lec01.pdf
 uid: cdf77e81-ac9e-bbb6-bcf8-0e6646c36ffe
 ---
+This resource contains information related to course introduction; innovation and operations discipline. 
+
