--- a/content/resources/mit15_769f10_lec02.md
+++ b/content/resources/mit15_769f10_lec02.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to frameworks for strategy
   and the decision category approach. '
-file: /media/courses/15-769-operations-strategy-fall-2010/61538bb741e26836c7ddc6d9b3052e21_MIT15_769F10_lec02.pdf
+file: /courses/15-769-operations-strategy-fall-2010/61538bb741e26836c7ddc6d9b3052e21_MIT15_769F10_lec02.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_769F10_lec02.pdf
 uid: 61538bb7-41e2-6836-c7dd-c6d9b3052e21
 ---
+This resource contains information related to frameworks for strategy and the decision category approach. 
+
