--- a/content/resources/mit15_769f10_lec07.md
+++ b/content/resources/mit15_769f10_lec07.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to vertical integration and
   outsourcing . '
-file: /media/courses/15-769-operations-strategy-fall-2010/5a81aefbf7667ee54542b643e29432a6_MIT15_769F10_lec07.pdf
+file: /courses/15-769-operations-strategy-fall-2010/5a81aefbf7667ee54542b643e29432a6_MIT15_769F10_lec07.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_769F10_lec07.pdf
 uid: 5a81aefb-f766-7ee5-4542-b643e29432a6
 ---
+This resource contains information related to vertical integration and outsourcing . 
+
