--- a/content/resources/mit15_769f10_lec10.md
+++ b/content/resources/mit15_769f10_lec10.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to capacity strategy: how
   to make decisions on capacity and capacity expansion. '
-file: /media/courses/15-769-operations-strategy-fall-2010/8f18462ee8ad5e8ca5fb88bb11dcc3a6_MIT15_769F10_lec10.pdf
+file: /courses/15-769-operations-strategy-fall-2010/8f18462ee8ad5e8ca5fb88bb11dcc3a6_MIT15_769F10_lec10.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_769F10_lec10.pdf
 uid: 8f18462e-e8ad-5e8c-a5fb-88bb11dcc3a6
 ---
+This resource contains information related to capacity strategy: how to make decisions on capacity and capacity expansion. 
+
