--- a/content/resources/mit15_769f10_lec11.md
+++ b/content/resources/mit15_769f10_lec11.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to facilities strategies
   and globalization; comparisons of plant productivity. '
-file: /media/courses/15-769-operations-strategy-fall-2010/6e38c550f1057b29278a657210192d49_MIT15_769F10_lec11.pdf
+file: /courses/15-769-operations-strategy-fall-2010/6e38c550f1057b29278a657210192d49_MIT15_769F10_lec11.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_769F10_lec11.pdf
 uid: 6e38c550-f105-7b29-278a-657210192d49
 ---
+This resource contains information related to facilities strategies and globalization; comparisons of plant productivity. 
+
