--- a/content/resources/mit15_769f10_lec12.md
+++ b/content/resources/mit15_769f10_lec12.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to summary lecture on facilities
   strategy and globalization. '
-file: /media/courses/15-769-operations-strategy-fall-2010/f0b86d0e617013327db391d0247ec18d_MIT15_769F10_lec12.pdf
+file: /courses/15-769-operations-strategy-fall-2010/f0b86d0e617013327db391d0247ec18d_MIT15_769F10_lec12.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_769F10_lec12.pdf
 uid: f0b86d0e-6170-1332-7db3-91d0247ec18d
 ---
+This resource contains information related to summary lecture on facilities strategy and globalization. 
+
