--- a/content/resources/mit15_769f10_lec17.md
+++ b/content/resources/mit15_769f10_lec17.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to competing on cost versus
   competing on availability. '
-file: /media/courses/15-769-operations-strategy-fall-2010/b8f3f2c91d2ecf9d7f0cd867e4dd58a8_MIT15_769F10_lec17.pdf
+file: /courses/15-769-operations-strategy-fall-2010/b8f3f2c91d2ecf9d7f0cd867e4dd58a8_MIT15_769F10_lec17.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_769F10_lec17.pdf
 uid: b8f3f2c9-1d2e-cf9d-7f0c-d867e4dd58a8
 ---
+This resource contains information related to competing on cost versus competing on availability. 
+
