--- a/content/resources/mit15_769f10_lec21.md
+++ b/content/resources/mit15_769f10_lec21.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to globalization, joint ventures,
   sourcing overseas, and macroeconomic effects of off- shoring. '
-file: /media/courses/15-769-operations-strategy-fall-2010/1962df4ca1e95a441fd285a661696bfc_MIT15_769F10_lec21.pdf
+file: /courses/15-769-operations-strategy-fall-2010/1962df4ca1e95a441fd285a661696bfc_MIT15_769F10_lec21.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_769F10_lec21.pdf
 uid: 1962df4c-a1e9-5a44-1fd2-85a661696bfc
 ---
+This resource contains information related to globalization, joint ventures, sourcing overseas, and macroeconomic effects of off- shoring. 
+
