--- a/content/resources/mit15_769f10_lec23.md
+++ b/content/resources/mit15_769f10_lec23.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information related to student presentations.
-file: /media/courses/15-769-operations-strategy-fall-2010/285afb9de07d02266379084a2478821f_MIT15_769F10_lec23.pdf
+file: /courses/15-769-operations-strategy-fall-2010/285afb9de07d02266379084a2478821f_MIT15_769F10_lec23.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_769F10_lec22.pdf
 uid: 285afb9d-e07d-0226-6379-084a2478821f
 ---
+This resource contains information related to student presentations.
+
