--- a/content/resources/mit15_769f10_lec24.md
+++ b/content/resources/mit15_769f10_lec24.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to student presentations
   and course wrap- up. '
-file: /media/courses/15-769-operations-strategy-fall-2010/5c8afefa1ea6baab2dda05343329d587_MIT15_769F10_lec24.pdf
+file: /courses/15-769-operations-strategy-fall-2010/5c8afefa1ea6baab2dda05343329d587_MIT15_769F10_lec24.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_769F10_lec24.pdf
 uid: 5c8afefa-1ea6-baab-2dda-05343329d587
 ---
+This resource contains information related to student presentations and course wrap- up. 
+
