--- a/content/resources/mit15_769f10_lec24a.md
+++ b/content/resources/mit15_769f10_lec24a.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to student presentations
   and course wrap- up. '
-file: /media/courses/15-769-operations-strategy-fall-2010/c13bbc8f1f8fb0d1030af732883b82cf_MIT15_769F10_lec24a.pdf
+file: /courses/15-769-operations-strategy-fall-2010/c13bbc8f1f8fb0d1030af732883b82cf_MIT15_769F10_lec24a.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_769F10_lec24a.pdf
 uid: c13bbc8f-1f8f-b0d1-030a-f732883b82cf
 ---
+This resource contains information related to student presentations and course wrap- up. 
+
