Sync all content

--- a/content/resources/15-769f10-th.md
+++ b/content/resources/15-769f10-th.md
@@ -12,10 +12,10 @@ image_metadata:
   credit: ''
   image-alt: The life cycle of a product.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 15-769f10-th.jpg
 uid: 1615ec4a-dd2a-1513-8dd9-83524f7aa4b9
 ---
 New image Upload
-
