--- a/content/resources/15-769f05-th.md
+++ b/content/resources/15-769f05-th.md
@@ -8,10 +8,10 @@ image_metadata:
   credit: ''
   image-alt: ''
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 15-769f05-th.jpg
 uid: 83d8408b-d178-dd38-dcc7-d6d9638c2bc7
 ---
 New image Upload
-
