--- a/content/resources/15-769f10.md
+++ b/content/resources/15-769f10.md
@@ -16,10 +16,10 @@ image_metadata:
   credit: ''
   image-alt: The life cycle of a product.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 15-769f10.jpg
 uid: 1cf33708-520b-0e3a-3119-42147280d77e
 ---
 The life cycle of a product, as defined by the US National Institute of Standards and Technology, Manufacturing Engineering Laboratory. This course discusses and analyzes the strategic decisions made by firms in manufacturing operations, and also analyzes operations strategy in service firms. (This image is in the public domain.)
-
