--- a/content/resources/mit15_769f10_lec01.md
+++ b/content/resources/mit15_769f10_lec01.md
@@ -6,6 +6,7 @@ file: /courses/15-769-operations-strategy-fall-2010/cdf77e81ac9ebbb6bcf80e6646c3
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_769F10_lec01.pdf
 uid: cdf77e81-ac9e-bbb6-bcf8-0e6646c36ffe
 ---
 This resource contains information related to course introduction; innovation and operations discipline. 
-
