--- a/content/resources/mit15_769f10_lec02.md
+++ b/content/resources/mit15_769f10_lec02.md
@@ -6,6 +6,7 @@ file: /courses/15-769-operations-strategy-fall-2010/61538bb741e26836c7ddc6d9b305
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_769F10_lec02.pdf
 uid: 61538bb7-41e2-6836-c7dd-c6d9b3052e21
 ---
 This resource contains information related to frameworks for strategy and the decision category approach. 
-
