--- a/content/resources/mit15_769f10_lec04.md
+++ b/content/resources/mit15_769f10_lec04.md
@@ -6,6 +6,7 @@ file: /courses/15-769-operations-strategy-fall-2010/a23deeaa5da797f7784a557cc2a9
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_769F10_lec04.pdf
 uid: a23deeaa-5da7-97f7-784a-557cc2a9ab7d
 ---
 This resource contains information related to value chain dynamics and operations decisions. 
-
