--- a/content/resources/mit15_769f10_lec07.md
+++ b/content/resources/mit15_769f10_lec07.md
@@ -6,6 +6,7 @@ file: /courses/15-769-operations-strategy-fall-2010/5a81aefbf7667ee54542b643e294
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_769F10_lec07.pdf
 uid: 5a81aefb-f766-7ee5-4542-b643e29432a6
 ---
 This resource contains information related to vertical integration and outsourcing . 
-
