--- a/content/resources/mit15_769f10_lec08.md
+++ b/content/resources/mit15_769f10_lec08.md
@@ -5,6 +5,7 @@ file: /courses/15-769-operations-strategy-fall-2010/dbe57ec189655543dada8274cdf8
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_769F10_lec08.pdf
 uid: dbe57ec1-8965-5543-dada-8274cdf83bbb
 ---
 This resource contains information related to business processes.
-
