--- a/content/resources/mit15_769f10_lec09.md
+++ b/content/resources/mit15_769f10_lec09.md
@@ -6,6 +6,7 @@ file: /courses/15-769-operations-strategy-fall-2010/64b9ac367a372cff4fd00d20d9d7
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_769F10_lec09.pdf
 uid: 64b9ac36-7a37-2cff-4fd0-0d20d9d75fc5
 ---
 This resource contains information related to process technology decisions and multiple plants. 
-
