--- a/content/resources/mit15_769f10_lec10.md
+++ b/content/resources/mit15_769f10_lec10.md
@@ -6,6 +6,7 @@ file: /courses/15-769-operations-strategy-fall-2010/8f18462ee8ad5e8ca5fb88bb11dc
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_769F10_lec10.pdf
 uid: 8f18462e-e8ad-5e8c-a5fb-88bb11dcc3a6
 ---
 This resource contains information related to capacity strategy: how to make decisions on capacity and capacity expansion. 
-
