--- a/content/resources/mit15_769f10_lec11.md
+++ b/content/resources/mit15_769f10_lec11.md
@@ -6,6 +6,7 @@ file: /courses/15-769-operations-strategy-fall-2010/6e38c550f1057b29278a65721019
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_769F10_lec11.pdf
 uid: 6e38c550-f105-7b29-278a-657210192d49
 ---
 This resource contains information related to facilities strategies and globalization; comparisons of plant productivity. 
-
