--- a/content/resources/mit15_769f10_lec12.md
+++ b/content/resources/mit15_769f10_lec12.md
@@ -6,6 +6,7 @@ file: /courses/15-769-operations-strategy-fall-2010/f0b86d0e617013327db391d0247e
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_769F10_lec12.pdf
 uid: f0b86d0e-6170-1332-7db3-91d0247ec18d
 ---
 This resource contains information related to summary lecture on facilities strategy and globalization. 
-
