--- a/content/resources/mit15_769f10_lec21.md
+++ b/content/resources/mit15_769f10_lec21.md
@@ -6,6 +6,7 @@ file: /courses/15-769-operations-strategy-fall-2010/1962df4ca1e95a441fd285a66169
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_769F10_lec21.pdf
 uid: 1962df4c-a1e9-5a44-1fd2-85a661696bfc
 ---
 This resource contains information related to globalization, joint ventures, sourcing overseas, and macroeconomic effects of off- shoring. 
-
