--- a/content/resources/mit15_769f10_lec23.md
+++ b/content/resources/mit15_769f10_lec23.md
@@ -5,6 +5,7 @@ file: /courses/15-769-operations-strategy-fall-2010/285afb9de07d02266379084a2478
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_769F10_lec22.pdf
 uid: 285afb9d-e07d-0226-6379-084a2478821f
 ---
 This resource contains information related to student presentations.
-
