--- a/content/resources/mit15_769f10_lec24.md
+++ b/content/resources/mit15_769f10_lec24.md
@@ -6,6 +6,7 @@ file: /courses/15-769-operations-strategy-fall-2010/5c8afefa1ea6baab2dda05343329
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_769F10_lec24.pdf
 uid: 5c8afefa-1ea6-baab-2dda-05343329d587
 ---
 This resource contains information related to student presentations and course wrap- up. 
-
