Sync all content

--- a/content/resources/15-769f10-th.md
+++ b/content/resources/15-769f10-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/15-769-operations-strategy-fall-2010/1615ec4add2a15138dd983524f7aa4b9_15-769f10-th.jpg
+file_size: 5878
 file_type: image/jpeg
 image_metadata:
   caption: The life cycle of a product, as defined by the US National Institute of
