--- a/content/resources/mit15_769f10_lec01.md
+++ b/content/resources/mit15_769f10_lec01.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information related to course introduction; innovation
   and operations discipline. '
 file: /courses/15-769-operations-strategy-fall-2010/cdf77e81ac9ebbb6bcf80e6646c36ffe_MIT15_769F10_lec01.pdf
+file_size: 578369
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
