--- a/content/resources/mit15_769f10_lec07.md
+++ b/content/resources/mit15_769f10_lec07.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information related to vertical integration and
   outsourcing . '
 file: /courses/15-769-operations-strategy-fall-2010/5a81aefbf7667ee54542b643e29432a6_MIT15_769F10_lec07.pdf
+file_size: 564665
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
