--- a/content/resources/mit15_769f10_lec11.md
+++ b/content/resources/mit15_769f10_lec11.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information related to facilities strategies
   and globalization; comparisons of plant productivity. '
 file: /courses/15-769-operations-strategy-fall-2010/6e38c550f1057b29278a657210192d49_MIT15_769F10_lec11.pdf
+file_size: 932694
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
