--- a/content/resources/mit15_769f10_lec12.md
+++ b/content/resources/mit15_769f10_lec12.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information related to summary lecture on facilities
   strategy and globalization. '
 file: /courses/15-769-operations-strategy-fall-2010/f0b86d0e617013327db391d0247ec18d_MIT15_769F10_lec12.pdf
+file_size: 562335
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
