--- a/content/resources/mit15_769f10_lec24.md
+++ b/content/resources/mit15_769f10_lec24.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information related to student presentations
   and course wrap- up. '
 file: /courses/15-769-operations-strategy-fall-2010/5c8afefa1ea6baab2dda05343329d587_MIT15_769F10_lec24.pdf
+file_size: 794950
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
