--- a/content/resources/mit15_769f10_lec04.md
+++ b/content/resources/mit15_769f10_lec04.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information related to value chain dynamics and
   operations decisions. '
 file: /courses/15-769-operations-strategy-fall-2010/a23deeaa5da797f7784a557cc2a9ab7d_MIT15_769F10_lec04.pdf
+file_size: 3693695
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
