--- a/content/resources/mit15_769f10_lec09.md
+++ b/content/resources/mit15_769f10_lec09.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information related to process technology decisions
   and multiple plants. '
 file: /courses/15-769-operations-strategy-fall-2010/64b9ac367a372cff4fd00d20d9d75fc5_MIT15_769F10_lec09.pdf
+file_size: 204201
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
