--- a/content/resources/mit15_769f10_lec17.md
+++ b/content/resources/mit15_769f10_lec17.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information related to competing on cost versus
   competing on availability. '
 file: /courses/15-769-operations-strategy-fall-2010/b8f3f2c91d2ecf9d7f0cd867e4dd58a8_MIT15_769F10_lec17.pdf
+file_size: 219433
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
