--- a/content/resources/mit15_769f10_lec23.md
+++ b/content/resources/mit15_769f10_lec23.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information related to student presentations.
 file: /courses/15-769-operations-strategy-fall-2010/285afb9de07d02266379084a2478821f_MIT15_769F10_lec23.pdf
+file_size: 38475
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
